<resources>
    // splash
    <string name="app_name">Abode Mart</string>
    <string name="app_name_subtitle">for Apartments</string>
    <string name="content_description">image</string>

    //login
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_contact_number">Contact Number</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password"><u><b>Forgot Password?</b></u></string>
    <string name="btn_lbl_login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register"><u><b>Register</b></u></string>

    // Register
    <string name="create_an_account">REGISTER</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_apt_no">Apartment Number</string>
    <string name="hint_building_address">Building Address</string>
    <string name="hint_building_no">Building Number</string>
    <string name="hint_preferred_delivery_weekday">Preferred Delivery Weekday</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree">I Agree to the <u>Terms &amp; Conditions</u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u><b>Login</b></u></string>

    <string-array name="days_array">
        <item>Select Preferred Weekday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    //Register Snack bar
    <string name="err_msg_enter_first_name">Please enter First Name</string>
    <string name="err_msg_enter_last_name">Please enter Last Name</string>
    <string name="err_msg_enter_email">Please enter Email</string>
    <string name="err_msg_enter_contact_no">Please enter Contact Number</string>
    <string name="err_msg_enter_building_no">Please enter Building Number</string>
    <string name="err_msg_enter_apartment_no">Please enter Apartment Number</string>
    <string name="err_msg_enter_preferred_weekday">Please select Preferred Weekday</string>
    <string name="err_msg_enter_password">Please enter Password</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm Password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and Confirm Password do not match</string>
    <string name="err_msg_agree_terms_and_conditions">Please agree to the terms and conditions</string>
    <string name="register_successful">Thank you for Registering..!!</string>


    <string name="please_click_back_again_to_exit">Please click back again to exit</string>

    // Forgot Password
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your email address and
        we\'ll send you an email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="email_sent_success">\"Email sent successfully to reset your password!\"</string>

    // Dashboard
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_myOrders">My Orders</string>

    // Settings Fragment
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="john">John</string>
    <string name="wick">Wick</string>
    <string name="john_wick">John Wick</string>
    <string name="john_email">john.wick327@gmail.com</string>
    <string name="_415_778_9034">(415) 778-9034</string>
    <string name="monday">Wednesday</string>
    <string name="delivery_preferred_on">Delivery Preferred on:</string>
    <string name="apartment_41">Apartment: 41</string>
    <string name="_1383">-1383</string>
    <string name="building_no">1383</string>
    <string name="apt_no">41</string>

    // User Profile
    <string name="title_complete_profile">COMPLETE YOUR PROFILE</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image Selection Failed!</string>
    <string name="err_msg_enter_mobile_number">Please enter Mobile Number</string>
    <string name="msg_profile_update_success">Your Profile is Updated Successfully.</string>
    <string name="cart_title">Cart</string>
    <string name="empty_cart">Start Adding Items to the Cart</string>
    <string name="not_empty_cart">Swipe Right to remove items</string>
    <string name="select_store_text"><b><i>Select a Store</i></b></string>
    <string name="profile_heading"><u><i>Profile</i></u></string>
    <string name="app_subtitle"><b>Order Groceries from Nearby Stores</b></string>

    <string name="Item_Count"><b>1</b></string>
    <string name="btn_clear_cart"><b>Clear All</b></string>
    <string name="title_search">Search</string>
    <string name="costco_title">Costco Wholesale</string>
    <string name="whole_foods_title">Whole Foods Market</string>
    <string name="new_india_bazar_title">New India Bazar</string>
    <string name="order_status"><b><i>In Progress</i></b></string>
    <string name="order_details"><u>Details</u></string>
    <string name="please_wait">Please Wait ...</string>

</resources>