<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.SettingsFragment"
    android:layout_marginTop="@dimen/et_padding"
        >
        <com.example.abodemart.utils.MSPTextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_item_grey_border"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingStart="@dimen/settings_edit_label_marginStartEnd"
            android:paddingTop="@dimen/settings_edit_label_marginTopBottom"
            android:paddingEnd="@dimen/settings_edit_label_marginStartEnd"
            android:paddingBottom="@dimen/settings_edit_label_marginTopBottom"
            android:text="@string/lbl_edit"
            android:textColor="@color/colorThemeBlue"
            android:textSize="@dimen/settings_edit_label_textSize" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        >
        <com.example.abodemart.utils.MSPTextViewBold
            android:id="@+id/tv_profile_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorDarkGrey"
            android:textSize="28sp"
            android:text="@string/profile_heading"
            />

        <com.example.abodemart.utils.MSPTextViewBold
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/et_padding"
            android:textColor="@color/colorThemeGreen"
            android:layout_below="@id/tv_profile_heading"
            android:textSize="@dimen/settings_name_textSize"
            android:text="@string/john_wick"
            />

        <com.example.abodemart.utils.MSPTextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_alignParentStart="true"
            android:text="@string/john_email"
            android:layout_marginTop="@dimen/settings_info_marginTop"
            android:textColor="@color/colorThemeBlue"
            android:textSize="@dimen/settings_info_textSize"
            />

        <com.example.abodemart.utils.MSPTextView
            android:id="@+id/tv_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/settings_info_marginTop"
            android:textColor="@color/colorThemeBlue"
            android:textSize="@dimen/settings_info_textSize"
            android:text="@string/_415_778_9034"
            />

        <LinearLayout
            android:id="@+id/ll_apt_building"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_mobile_number"
            android:layout_marginTop="@dimen/settings_info_marginTop"
            >
            <com.example.abodemart.utils.MSPTextView
                android:id="@+id/tv_building_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apartment_41"
                android:textColor="@color/colorThemeBlue"
                android:textSize="@dimen/settings_info_textSize" />
            <com.example.abodemart.utils.MSPTextView
                android:id="@+id/tv_apt_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorThemeBlue"
                android:textSize="@dimen/settings_info_textSize"
                android:text="@string/_1383"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_preferred_weekday_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_below="@id/ll_apt_building"
            android:layout_marginTop="@dimen/settings_info_marginTop"
            >
            <com.example.abodemart.utils.MSPTextView
                android:id="@+id/text_preferred_delivery_weekday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:textColor="@color/colorThemeBlue"
                android:textSize="@dimen/settings_info_textSize"
                android:text="@string/delivery_preferred_on" />

            <com.example.abodemart.utils.MSPTextViewBold
                android:id="@+id/preferred_weekday_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorThemeGreen"
                android:textSize="@dimen/settings_info_textSize"
                android:text="@string/monday"
                />
        </LinearLayout>


        <com.example.abodemart.utils.MSPButtonBold
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/ll_preferred_weekday_delivery"
            android:layout_marginStart="@dimen/settings_button_margin"
            android:layout_marginTop="@dimen/settings_button_margin"
            android:layout_marginEnd="@dimen/settings_button_margin"
            android:layout_marginBottom="@dimen/settings_button_margin"
            android:background="@drawable/bg_button"
            android:foreground="?attr/selectableItemBackground"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/btn_lbl_logout"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_textSize"
            />
    </RelativeLayout>
    </RelativeLayout>

