<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen"
    tools:context=".ui.activities.SplashActivity">

    <FrameLayout
        android:id="@+id/fl_logo"
        android:layout_width="@dimen/splash_image_width_height"
        android:layout_height="@dimen/splash_image_width_height"
        android:layout_marginTop="@dimen/splash_image_marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_app_name"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/splash_imageView_margin"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />
    </FrameLayout>

    <com.example.abodemart.utils.MSPTextViewBold
    android:id="@+id/tv_app_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:textColor="@color/white"
    android:textSize="@dimen/splash_title_text_size"
    />
    <com.example.abodemart.utils.MSPTextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_subtitle"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="@dimen/splash_subtitle_text_size"
    />

</androidx.constraintlayout.widget.ConstraintLayout>